<resources>
    <string name="app_name">Łódzki Posłaniec</string>
    <string name="register_name">Imię</string>
    <string name="register_last_name">Nazwisko</string>
    <string name="register_street">Ulica</string>
    <string name="register_city">Miejscowość</string>
    <string name="register_flat_number">Nr mieszkania</string>
    <string name="register_postal_code">Kod pocztowy</string>
    <string name="register_building_number">Nr budynku</string>
    <string name="register_password">Hasło</string>
    <string name="register_password_repeat">Powtórz hasło</string>
    <string name="register_button_submit">Zatwierdź</string>
    <string name="email">E-Mail</string>
    <string name="report_damaged_city_property">Zgłoś uszkodzoną infrastrukturę</string>
    <string name="call">Połącz z call center</string>
    <string name="report_a_pothole">Zgłoś dziurę</string>
    <string name="infrastructure">Infrastruktura</string>
    <string name="send_motion">Wyślij wniosek</string>
    <string name="cleaning_request">Prośba o sprzątanie</string>
    <string name="call_permission_request">Zgoda jest potrzebna, aby wykonać połączenie telefoniczne. Zostaniesz połączony z miejskim call center</string>
    <string name="call_permission_request_title">Potrzebna zgoda</string>
    <string name="cancel">Odmów</string>
    <string name="register_street_number">Numer</string>
    <string name="marked_fields_required">Zaznaczone pola są wymagane</string>
</resources>
