<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfrastructureActivity">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/infrastructure"
        android:titleTextColor="@color/colorWhite"
        android:elevation="4dp"
        android:background="@color/colorBlue"
        android:id="@+id/toolBarInfrastructure">
        <Button
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:width="50dp"
            android:height="50dp"
            android:background="@color/colorWhite"
            />
    </Toolbar>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfrastructureReportAPotHole"
        android:text="@string/report_a_pothole"
        android:layout_marginTop="50dp"
        android:layout_below="@id/toolBarInfrastructure"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfrastructureReportDamagedProperty"
        android:text="@string/report_damaged_city_property"
        android:layout_below="@+id/buttonInfrastructureReportAPotHole"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfrastructureRequestCleaning"
        android:text="@string/cleaning_request"
        android:layout_below="@+id/buttonInfrastructureReportDamagedProperty"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfrastructureCall"
        android:text="@string/call"
        android:layout_below="@+id/buttonInfrastructureRequestCleaning"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInfrastructureSendMotion"
        android:text="@string/send_motion"
        android:layout_below="@+id/buttonInfrastructureCall"
        />
</RelativeLayout>