<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_brick_factory"
    android:backgroundTint="@color/colorBlueTransparent"
    android:backgroundTintMode="src_atop"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_name"
        android:layout_marginTop="50dp"
        android:id="@+id/textViewName"
        android:layout_marginLeft="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name"
        android:inputType="textCapWords"
        android:background="@color/colorWhite"
        android:id="@+id/editTextName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/textViewName"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_last_name"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewLastName"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_last_name"
        android:layout_below="@+id/textViewLastName"
        android:background="@color/colorWhite"
        android:id="@+id/editTextLastName"
        android:layout_marginLeft="20dp"
        android:inputType="textCapWords"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_street"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewRegisterStreet"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextLastName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_street"
        android:layout_below="@id/textViewRegisterStreet"
        android:id="@+id/editTextStreet"
        android:background="@color/colorWhite"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textCapSentences"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_postal_code"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewRegisterPostalCode"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextStreet"
        android:inputType="textPostalAddress"
        />
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewRegisterPostalCode"
        android:background="@color/colorWhite"
        android:id="@+id/editTextRegisterPostalCode"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_city"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewRegisterCityName"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextStreet"
        android:layout_toRightOf="@+id/editTextRegisterPostalCode"
        />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="Miasto"
        android:layout_below="@id/textViewRegisterCityName"
        android:background="@color/colorWhite"
        android:layout_toRightOf="@+id/editTextRegisterPostalCode"
        android:layout_marginLeft="20dp"
        android:inputType="textCapWords"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewRegisterEMail"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextRegisterPostalCode"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/textViewRegisterEMail"
        android:id="@+id/editTextRegisterEmail"
        android:background="@color/colorWhite"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewPassword"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextRegisterEmail"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:id="@+id/editTextRegisterPassword1"
        android:layout_below="@+id/textViewPassword"
        android:inputType="textPassword"
        android:background="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password_repeat"
        android:layout_marginTop="15dp"
        android:id="@+id/textViewRegisterPasswordRepeat"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editTextRegisterPassword1"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_repeat"
        android:id="@+id/editTextRegisterPassword2"
        android:layout_below="@+id/textViewRegisterPasswordRepeat"
        android:inputType="textPassword"
        android:background="@color/colorWhite"
        android:paddingLeft="5dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRegisterPassword2"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="@string/register_button_submit"
        android:background="@color/colorBlue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
</RelativeLayout>